Fixed design to view scrollbar always

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,3 +1,4 @@
+html { overflow-y: scroll; }
 body {
   width:100%;
   padding:0;
